After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 167584 - SheetWidgetAdjustment value is not updated after changing the target cell.
SheetWidgetAdjustment value is not updated after changing the target cell.
Status: RESOLVED FIXED
Product: Gnumeric
Classification: Applications
Component: Sheet Objects
1.5.x
Other Linux
: Normal minor
: ---
Assigned To: Jody Goldberg
Jody Goldberg
Depends on:
Blocks:
 
 
Reported: 2005-02-16 12:02 UTC by Jean Bréfort
Modified: 2005-05-29 06:20 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Jean Bréfort 2005-02-16 12:02:12 UTC
Create a scrollbar, slider or spinbutton, link to a cell, and change the value
in the cell. The widget is not updated.
This happens because when dependent_set_expr is called, it calls
dependent_unlink, but if the dependent is not a cell, dependent_link is never
called. And even if it is called, ajustment_eval should also be called so that
the widget reflects immediatly the cell content.
We should also do something when the value in the cell is not in the allowed
interval for the widget.
I don't attach a patch since I don't know whether dependent_link should be
called from dependent_set_expr or from cb_adjustment_ok_clicked.
Comment 1 Jody Goldberg 2005-05-29 06:20:13 UTC
You're correct.  dependent_set_expr does unlink things and there was an
interface change that clarified that it should not re-link things.  I've patched
the various calls to set_expr to relink when necessary.